responsive design, mobile

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
       <span class="log_topimg" style="background-image: url(img/etc/profile.jpg);" role="img" aria-label="UX Designer, Donghwan Kim, 디자이너, 김동환"></span>
       <div class="about_container">
         <div class="about_des">
-            <p class="about_title"><b>UX Designer</b></p>
+            <p class="about_title"><b>김동환</b> <b>UX Designer</b></p>
         </div>
         <div class="about_kr">
             <div class="about_des">
@@ -96,11 +96,11 @@
         <hr class="solid">
         <div class="about_en">  
             <div class="about_des" id="about_en">
-                <p class="about_p">From the UX/UI Design, I had a vast interst in development, team managing and growing products from a business perspective.
-                    I enjoy working at the lean and small team with fully self-motivated teammates.
-                </p>
-                <p class="about_title">It is logic that we prove, but by intuition that we discover.
-                    <br>To know how to criticize is good, to know how to create is better.</p>
+              <p class="about_p">From the UX/UI Design, I had a vast interst in development, team managing and growing products from a business perspective.
+                  I enjoy working at the lean and small team with fully self-motivated teammates.
+              </p>
+              <p class="about_title">It is logic that we prove, but by intuition that we discover.
+                  <br>To know how to criticize is good, to know how to create is better.</p>
             </div>
         </div>
       </div>
