--- a/index.html
+++ b/index.html
@@ -81,37 +81,37 @@
     </div>
     <!--contents----------------------->
     <div class="content">
-      <div class="title">
-        <ul class="main_title">
-          <li>Find</li>
-          <li>Define</li>
-          <li>Create</li>
-        </ul>
+      <div class="title_container">
+        <div class="main_title">Find</div>
+        <div class="main_title">Define</div>
+        <div class="main_title">Create</div>
       </div>
-      <svg class="arrow" width="458" height="432" viewBox="0 0 458 432" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path class="path1" d="M40.9999 98.5C73.4998 56.5 190.197 -13.9316 243.5 43.5C314.5 120 69.9999 356.5 25.5 279.5C-18.9999
-          202.501 314 97.7554 360.5 195.128C407 292.5 198.5 412.5 183 376.5C167.5 340.5 360.5 292 414 387.5"
-          stroke="url(#paint0_linear)" stroke-width="42" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="path2" d="M367.074 415.219C395.102 405.152 441.866 414.082 441.866 414.082C441.866 414.082 430.242 355.906
-          441.829 333" stroke="url(#paint1_linear)" stroke-width="32" stroke-linecap="round" stroke-linejoin="round"/>
-        <defs>
-        <linearGradient id="paint0_linear" x1="381" y1="27.6281" x2="94.4999" y2="311.628" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#4098FF" stop-opacity="0.75"/>
-        <stop offset="0.505208" stop-color="#84BCFF"/>
-        <stop offset="1" stop-color="#D5E8FF" stop-opacity="0.83"/>
-        </linearGradient>
-        <linearGradient id="paint1_linear" x1="260" y1="521" x2="458" y2="297.5" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#AFD4FF"/>
-        <stop offset="0.65152" stop-color="#89BDFA"/>
-        </linearGradient>
-        </defs>
-      </svg>
-      <p class="main_sub1">UX/UI Designer, Donghwan Kim</p>
-      <p class="main_sub2">Based in Seoul</p>
+      <div class="arrow_container">
+        <svg class="arrow" width="458" height="432" viewBox="0 0 458 432" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path class="path1" d="M40.9999 98.5C73.4998 56.5 190.197 -13.9316 243.5 43.5C314.5 120 69.9999 356.5 25.5 279.5C-18.9999
+            202.501 314 97.7554 360.5 195.128C407 292.5 198.5 412.5 183 376.5C167.5 340.5 360.5 292 414 387.5"
+            stroke="url(#paint0_linear)" stroke-width="42" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="path2" d="M367.074 415.219C395.102 405.152 441.866 414.082 441.866 414.082C441.866 414.082 430.242 355.906
+            441.829 333" stroke="url(#paint1_linear)" stroke-width="32" stroke-linecap="round" stroke-linejoin="round"/>
+          <defs>
+          <linearGradient id="paint0_linear" x1="381" y1="27.6281" x2="94.4999" y2="311.628" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#4098FF" stop-opacity="0.75"/>
+          <stop offset="0.505208" stop-color="#84BCFF"/>
+          <stop offset="1" stop-color="#D5E8FF" stop-opacity="0.83"/>
+          </linearGradient>
+          <linearGradient id="paint1_linear" x1="260" y1="521" x2="458" y2="297.5" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#AFD4FF"/>
+          <stop offset="0.65152" stop-color="#89BDFA"/>
+          </linearGradient>
+          </defs>
+        </svg>
+      </div>
     </div>
+    <p class="main_sub1">UX/UI Designer, Donghwan Kim</p>
+    <p class="main_sub2">Based in Seoul</p>
     <!--works----------------------->
     <div name="웹페이지 리뉴얼">
-      <a href="works/donny.html" class="work_img" style="background-image: url(img/works/donny/1.jpg)" title="web design, 웹디자인"></a>
+      <a href="works/donny.html" class="work_img" style="background-image: url(img/works/donny/1.JPG)" title="web design, 웹디자인"></a>
       <a class="work_title" href="works/donny.html">웹 사이트 리뉴얼 노트</a>
       <p class="work_subtitle">개발자와 소통하기 위한 노력, 나를 소개하는 방법</p>
       <p class="work_date">Spring 2021 | Web Design</p>
