--- a/works/bookshelf.html
+++ b/works/bookshelf.html
@@ -91,34 +91,36 @@
         <p class="p_title_en">BRIEF</p>
         <p class="p_body">Bookshelf 프로젝트는 해군 시절 28권의 책들을 읽으며 상상했던 생각과 이미지를 바탕으로 제작한 북커버 리디자인 프로젝트입니다.</p>
       </div>
-      <div class="p_section_container1">
-        <div class="p_section_container2">
-          <span class="p_section_title">SITUATION</span>
+      <div class="p_section_container">
+        <div class="p_section_interaction">
+          <svg class="interaction" width="298" height="181" viewBox="0 0 298 181" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="situation1 show-on-scroll" d="M102.5 53L11 170.5H244" stroke="url(#paint1_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="situation2 show-on-scroll" d="M180.397 11L86 133H214" stroke="url(#paint0_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="situation3 show-on-scroll" d="M116 11L189 103" stroke="url(#paint3_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="situation4 show-on-scroll" d="M193 51L287 170.5" stroke="url(#paint2_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+            <defs>
+            <linearGradient id="paint0_linear" x1="150" y1="11" x2="99" y2="133" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#84BCFF" stop-opacity="0.84"/>
+            <stop offset="1" stop-color="#4098FF" stop-opacity="0.79"/>
+            </linearGradient>
+            <linearGradient id="paint1_linear" x1="124.5" y1="56" x2="84.5" y2="171" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#84BCFF" stop-opacity="0.79"/>
+            <stop offset="1" stop-color="#4098FF" stop-opacity="0.74"/>
+            </linearGradient>
+            <linearGradient id="paint2_linear" x1="240" y1="51" x2="304.5" y2="167.5" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#84BCFF" stop-opacity="0.94"/>
+            <stop offset="1" stop-color="#4098FF" stop-opacity="0.88"/>
+            </linearGradient>
+            <linearGradient id="paint3_linear" x1="116" y1="11" x2="152.5" y2="103" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#84BCFF" stop-opacity="0.89"/>
+            <stop offset="1" stop-color="#4098FF" stop-opacity="0.75"/>
+            </linearGradient>
+            </defs>
+          </svg>
         </div>
-        <svg class="p_section_interaction" width="298" height="181" viewBox="0 0 298 181" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path class="situation1 show-on-scroll" d="M102.5 53L11 170.5H244" stroke="url(#paint1_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="situation2 show-on-scroll" d="M180.397 11L86 133H214" stroke="url(#paint0_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="situation3 show-on-scroll" d="M116 11L189 103" stroke="url(#paint3_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="situation4 show-on-scroll" d="M193 51L287 170.5" stroke="url(#paint2_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-          <defs>
-          <linearGradient id="paint0_linear" x1="150" y1="11" x2="99" y2="133" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#84BCFF" stop-opacity="0.84"/>
-          <stop offset="1" stop-color="#4098FF" stop-opacity="0.79"/>
-          </linearGradient>
-          <linearGradient id="paint1_linear" x1="124.5" y1="56" x2="84.5" y2="171" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#84BCFF" stop-opacity="0.79"/>
-          <stop offset="1" stop-color="#4098FF" stop-opacity="0.74"/>
-          </linearGradient>
-          <linearGradient id="paint2_linear" x1="240" y1="51" x2="304.5" y2="167.5" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#84BCFF" stop-opacity="0.94"/>
-          <stop offset="1" stop-color="#4098FF" stop-opacity="0.88"/>
-          </linearGradient>
-          <linearGradient id="paint3_linear" x1="116" y1="11" x2="152.5" y2="103" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#84BCFF" stop-opacity="0.89"/>
-          <stop offset="1" stop-color="#4098FF" stop-opacity="0.75"/>
-          </linearGradient>
-          </defs>
-          </svg>          
+        <div class="p_sectionTitle_container">
+          <div class="p_sectionTitle">SITUATION</div>
+        </div>
       </div>
       <div class="p_box_3" style="background-image: url(../img/works/bookshelf/2.jpg); margin-top: 160px;" title="Navy, 대한민국해군"></div>
       <div class="p_container">
@@ -129,50 +131,52 @@
           온 게 아니네 / We’re here to preserve democracy, not to practice it”. <b>자유가 제한되면 창작욕구와 상상력이 높아지더군요.</b> 그렇게 누가 
           시키지도 않았지만, 조용히 망망대해를 보면서 수첩에 스케치를 했습니다. 존경하는 디자이너 <a class="link" href="https://chipkidd.com/home/" target="_blank">칩 키드(Chip Kidd)</a>의 책에서 영감을 받아 영어권 독자들을 위한 표지를 컨셉으로 잡았습니다.</p>
       </div>
-      <div class="p_section_container1">
-        <div class="p_section_container2">
-          <span class="p_section_title">IDEA</span>
+      <div class="p_section_container">
+        <div class="p_section_interaction">
+          <svg class="interaction" width="310" height="184" viewBox="0 0 310 184" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="idea1 show-on-scroll" d="M23.0002 166L139.611 100.213L80.7269 79.707" stroke="url(#paint0_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea2 show-on-scroll" d="M135.937 60.6578L113.222 22.5066" stroke="url(#paint1_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea3 show-on-scroll" d="M164.519 48.3687L178.917 13.198" stroke="url(#paint4_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea4 show-on-scroll" d="M287.275 17.3297L168.996 83.5354L227.88 104.042" stroke="url(#paint5_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea5 show-on-scroll" d="M172.705 121.867L196.693 159.23" stroke="url(#paint2_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea6 show-on-scroll" d="M143.523 134.522L131.077 170.429" stroke="url(#paint3_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <defs>
+            <linearGradient id="paint0_linear" x1="26" y1="102" x2="49.0319" y2="46.4523" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="0.505208" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#97C7FF" stop-opacity="0.83"/>
+            </linearGradient>
+            <linearGradient id="paint1_linear" x1="69.5" y1="17.4999" x2="128.644" y2="114.94" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="0.364583" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#AAD1FF"/>
+            </linearGradient>
+            <linearGradient id="paint2_linear" x1="218.5" y1="159" x2="224.691" y2="107.253" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="0.364583" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#B3D6FF"/>
+            </linearGradient>
+            <linearGradient id="paint3_linear" x1="137" y1="185.5" x2="163.298" y2="176.363" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="0.505208" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#82BBFF"/>
+            </linearGradient>
+            <linearGradient id="paint4_linear" x1="124.5" y1="-15.5" x2="101.269" y2="11.619" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.68"/>
+            <stop offset="0.505208" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#9FCBFF"/>
+            </linearGradient>
+            <linearGradient id="paint5_linear" x1="239" y1="19.4999" x2="215.566" y2="108.166" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#2D8DFF" stop-opacity="0.55"/>
+            <stop offset="0.5011" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#9CCAFF"/>
+            </linearGradient>
+            </defs>
+          </svg>
         </div>
-        <svg class="p_section_interaction" width="310" height="184" viewBox="0 0 310 184" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path class="idea1 show-on-scroll" d="M23.0002 166L139.611 100.213L80.7269 79.707" stroke="url(#paint0_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea2 show-on-scroll" d="M135.937 60.6578L113.222 22.5066" stroke="url(#paint1_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea3 show-on-scroll" d="M164.519 48.3687L178.917 13.198" stroke="url(#paint4_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea4 show-on-scroll" d="M287.275 17.3297L168.996 83.5354L227.88 104.042" stroke="url(#paint5_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea5 show-on-scroll" d="M172.705 121.867L196.693 159.23" stroke="url(#paint2_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea6 show-on-scroll" d="M143.523 134.522L131.077 170.429" stroke="url(#paint3_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <defs>
-          <linearGradient id="paint0_linear" x1="26" y1="102" x2="49.0319" y2="46.4523" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="0.505208" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#97C7FF" stop-opacity="0.83"/>
-          </linearGradient>
-          <linearGradient id="paint1_linear" x1="69.5" y1="17.4999" x2="128.644" y2="114.94" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="0.364583" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#AAD1FF"/>
-          </linearGradient>
-          <linearGradient id="paint2_linear" x1="218.5" y1="159" x2="224.691" y2="107.253" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="0.364583" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#B3D6FF"/>
-          </linearGradient>
-          <linearGradient id="paint3_linear" x1="137" y1="185.5" x2="163.298" y2="176.363" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="0.505208" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#82BBFF"/>
-          </linearGradient>
-          <linearGradient id="paint4_linear" x1="124.5" y1="-15.5" x2="101.269" y2="11.619" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.68"/>
-          <stop offset="0.505208" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#9FCBFF"/>
-          </linearGradient>
-          <linearGradient id="paint5_linear" x1="239" y1="19.4999" x2="215.566" y2="108.166" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#2D8DFF" stop-opacity="0.55"/>
-          <stop offset="0.5011" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#9CCAFF"/>
-          </linearGradient>
-          </defs>
-        </svg>       
+        <div class="p_sectionTitle_container">
+          <div class="p_sectionTitle">IDEA</div>
+        </div>
       </div>
       <div class="p_box_3" style="background-image: url(../img/works/bookshelf/3.jpg); margin-top: 180px;" title="Bookshelf, Book Design, 북디자인"></div>
       <div class="p_box_container" style="margin: 10px auto auto auto;">
@@ -188,19 +192,21 @@
            작업을 보시는 분들의 본능적인 상상과 판단을 방해하기 싫어 책의 내용에 관한 <b>자세한 설명은 하지 않겠습니다.</b>
           </p>
       </div>
-      <div class="p_section_container1" style="margin-top: 70px;">
-        <div class="p_section_container2">
-          <span class="p_section_title">DESIGN</span>
+      <div class="p_section_container">
+        <div class="p_section_interaction">
+          <svg class="interaction" width="241" height="199" viewBox="0 0 241 199" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="design1 show-on-scroll" d="M11.128 149.895C17.0919 218.845 118.704 185.139 103.063 130.521C87.4211 75.9029 25.8435 100.671 57.8065 145.704C89.7695 190.736 205 149.895 177.479 77.7496C149.958 5.60407 66.1919 62.1553 137.096 122.328C208 182.5 280.5 64.5 183.5 11" stroke="url(#paint0_linear)" stroke-width="20.53" stroke-linecap="round"/>
+            <defs>
+            <linearGradient id="paint0_linear" x1="172.258" y1="65.2027" x2="85.0287" y2="157.848" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="1" stop-color="#83BCFF" stop-opacity="0.75"/>
+            </linearGradient>
+            </defs>
+          </svg>
         </div>
-        <svg class="p_section_interaction" width="241" height="199" viewBox="0 0 241 199" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path class="design1 show-on-scroll" d="M11.128 149.895C17.0919 218.845 118.704 185.139 103.063 130.521C87.4211 75.9029 25.8435 100.671 57.8065 145.704C89.7695 190.736 205 149.895 177.479 77.7496C149.958 5.60407 66.1919 62.1553 137.096 122.328C208 182.5 280.5 64.5 183.5 11" stroke="url(#paint0_linear)" stroke-width="20.53" stroke-linecap="round"/>
-          <defs>
-          <linearGradient id="paint0_linear" x1="172.258" y1="65.2027" x2="85.0287" y2="157.848" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="1" stop-color="#83BCFF" stop-opacity="0.75"/>
-          </linearGradient>
-          </defs>
-        </svg>
+        <div class="p_sectionTitle_container">
+          <div class="p_sectionTitle">DESIGN</div>
+        </div>
       </div>
       <div class="p_box_splash" style="background-image: url(../img/works/bookshelf/6-1.jpg); margin-top: 180px;" title="Ten Years of Madness, Bookshelf, Book Design, 북디자인"></div>
       <div class="p_box_container" style="margin: 160px auto auto auto;">
@@ -277,11 +283,9 @@
           불가능할 정도로 빠르게 써보았습니다. 우리에게 익숙한 만화 ‘설국열차’ 에서는 <b>앞으로 나아갈 수밖에 없는 열차의 운명</b>과 긴장감을 
           대각선으로 나타내고 그 안에서의 인간군상을 좁은 자간(Letter Spacing)으로 표현했습니다.</p>
       </div>
-      <div class="p_section_container1" style="margin: 130px auto 170px auto;">
-        <div class="p_section_container2">
-          <span class="p_section_title2">REVIEW</span>
-        </div>
-        <svg class="p_section_interaction" width="276" height="140" viewBox="0 0 276 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div class="p_section_container">
+        <div class="p_section_interaction">
+          <svg class="interaction" width="276" height="140" viewBox="0 0 276 140" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path class="review1 show-on-scroll" d="M12 128L12 27" stroke="url(#paint0_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
           <path class="review2 show-on-scroll" d="M54 128L54 12" stroke="url(#paint1_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
           <path class="review3 show-on-scroll" d="M96 128L96 43" stroke="url(#paint2_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
@@ -320,6 +324,10 @@
           </linearGradient>
           </defs>
           </svg>
+        </div>
+        <div class="p_sectionTitle_container">
+          <div class="p_sectionTitle">REVIEW</div>
+        </div>
       </div>
       <div class="p_box_3" style="background-image: url(../img/works/bookshelf/11.jpg); margin-top: 160px;" title="Night Flight, Bookshelf, Book Design, 북디자인"></div>
       <div class="p_container">
