--- a/works/donny.html
+++ b/works/donny.html
@@ -94,34 +94,36 @@
             목표는 달성했지만, 불편한 유지보수와 기록할 수 있는 공간으로의 역할을 하기에는 무리가 있다고 판단하여, 
             약 한 달 반간의 웹사이트 리뉴얼 작업을 진행하게 되었습니다.</p>
       </div>
-      <div class="p_section_container1">
-        <div class="p_section_container2">
-          <span class="p_section_title">SITUATION</span>
+      <div class="p_section_container">
+        <div class="p_section_interaction">
+          <svg class="interaction" width="298" height="181" viewBox="0 0 298 181" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="situation1 show-on-scroll" d="M102.5 53L11 170.5H244" stroke="url(#paint1_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="situation2 show-on-scroll" d="M180.397 11L86 133H214" stroke="url(#paint0_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="situation3 show-on-scroll" d="M116 11L189 103" stroke="url(#paint3_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="situation4 show-on-scroll" d="M193 51L287 170.5" stroke="url(#paint2_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+            <defs>
+            <linearGradient id="paint0_linear" x1="150" y1="11" x2="99" y2="133" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#84BCFF" stop-opacity="0.84"/>
+            <stop offset="1" stop-color="#4098FF" stop-opacity="0.79"/>
+            </linearGradient>
+            <linearGradient id="paint1_linear" x1="124.5" y1="56" x2="84.5" y2="171" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#84BCFF" stop-opacity="0.79"/>
+            <stop offset="1" stop-color="#4098FF" stop-opacity="0.74"/>
+            </linearGradient>
+            <linearGradient id="paint2_linear" x1="240" y1="51" x2="304.5" y2="167.5" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#84BCFF" stop-opacity="0.94"/>
+            <stop offset="1" stop-color="#4098FF" stop-opacity="0.88"/>
+            </linearGradient>
+            <linearGradient id="paint3_linear" x1="116" y1="11" x2="152.5" y2="103" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#84BCFF" stop-opacity="0.89"/>
+            <stop offset="1" stop-color="#4098FF" stop-opacity="0.75"/>
+            </linearGradient>
+            </defs>
+          </svg>
         </div>
-        <svg class="p_section_interaction" width="298" height="181" viewBox="0 0 298 181" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path class="situation1 show-on-scroll" d="M102.5 53L11 170.5H244" stroke="url(#paint1_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="situation2 show-on-scroll" d="M180.397 11L86 133H214" stroke="url(#paint0_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="situation3 show-on-scroll" d="M116 11L189 103" stroke="url(#paint3_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="situation4 show-on-scroll" d="M193 51L287 170.5" stroke="url(#paint2_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-          <defs>
-          <linearGradient id="paint0_linear" x1="150" y1="11" x2="99" y2="133" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#84BCFF" stop-opacity="0.84"/>
-          <stop offset="1" stop-color="#4098FF" stop-opacity="0.79"/>
-          </linearGradient>
-          <linearGradient id="paint1_linear" x1="124.5" y1="56" x2="84.5" y2="171" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#84BCFF" stop-opacity="0.79"/>
-          <stop offset="1" stop-color="#4098FF" stop-opacity="0.74"/>
-          </linearGradient>
-          <linearGradient id="paint2_linear" x1="240" y1="51" x2="304.5" y2="167.5" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#84BCFF" stop-opacity="0.94"/>
-          <stop offset="1" stop-color="#4098FF" stop-opacity="0.88"/>
-          </linearGradient>
-          <linearGradient id="paint3_linear" x1="116" y1="11" x2="152.5" y2="103" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#84BCFF" stop-opacity="0.89"/>
-          <stop offset="1" stop-color="#4098FF" stop-opacity="0.75"/>
-          </linearGradient>
-          </defs>
-          </svg>          
+        <div class="p_sectionTitle_container">
+          <div class="p_sectionTitle">SITUATION</div>
+        </div>
       </div>
       <div class="p_box_splash" style="background-image: url(../img/works/donny/2.jpg); margin-top: 180px;" title="Donny99, UX Design, 디자인"></div>
       <div class="p_box_4" style="background-image: url(../img/works/donny/2-1.jpg);" title="Donny99, UX Design, Responsive Design, 디자인"></div>
@@ -155,50 +157,52 @@
             저의 삶을 기록</b>하고 싶었습니다. 기술적인 개선으로는 색을 변수로 정의해 다크모드를 구현하는 
             것과 SVG 애니메이션 컨트롤이었습니다.</p>
       </div>
-      <div class="p_section_container1">
-        <div class="p_section_container2">
-          <span class="p_section_title">IDEA</span>
+      <div class="p_section_container">
+        <div class="p_section_interaction">
+          <svg class="interaction" width="310" height="184" viewBox="0 0 310 184" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="idea1 show-on-scroll" d="M23.0002 166L139.611 100.213L80.7269 79.707" stroke="url(#paint0_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea2 show-on-scroll" d="M135.937 60.6578L113.222 22.5066" stroke="url(#paint1_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea3 show-on-scroll" d="M164.519 48.3687L178.917 13.198" stroke="url(#paint4_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea4 show-on-scroll" d="M287.275 17.3297L168.996 83.5354L227.88 104.042" stroke="url(#paint5_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea5 show-on-scroll" d="M172.705 121.867L196.693 159.23" stroke="url(#paint2_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <path class="idea6 show-on-scroll" d="M143.523 134.522L131.077 170.429" stroke="url(#paint3_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+            <defs>
+            <linearGradient id="paint0_linear" x1="26" y1="102" x2="49.0319" y2="46.4523" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="0.505208" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#97C7FF" stop-opacity="0.83"/>
+            </linearGradient>
+            <linearGradient id="paint1_linear" x1="69.5" y1="17.4999" x2="128.644" y2="114.94" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="0.364583" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#AAD1FF"/>
+            </linearGradient>
+            <linearGradient id="paint2_linear" x1="218.5" y1="159" x2="224.691" y2="107.253" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="0.364583" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#B3D6FF"/>
+            </linearGradient>
+            <linearGradient id="paint3_linear" x1="137" y1="185.5" x2="163.298" y2="176.363" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="0.505208" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#82BBFF"/>
+            </linearGradient>
+            <linearGradient id="paint4_linear" x1="124.5" y1="-15.5" x2="101.269" y2="11.619" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.68"/>
+            <stop offset="0.505208" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#9FCBFF"/>
+            </linearGradient>
+            <linearGradient id="paint5_linear" x1="239" y1="19.4999" x2="215.566" y2="108.166" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#2D8DFF" stop-opacity="0.55"/>
+            <stop offset="0.5011" stop-color="#84BCFF"/>
+            <stop offset="1" stop-color="#9CCAFF"/>
+            </linearGradient>
+            </defs>
+          </svg>
         </div>
-        <svg class="p_section_interaction" width="310" height="184" viewBox="0 0 310 184" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path class="idea1 show-on-scroll" d="M23.0002 166L139.611 100.213L80.7269 79.707" stroke="url(#paint0_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea2 show-on-scroll" d="M135.937 60.6578L113.222 22.5066" stroke="url(#paint1_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea3 show-on-scroll" d="M164.519 48.3687L178.917 13.198" stroke="url(#paint4_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea4 show-on-scroll" d="M287.275 17.3297L168.996 83.5354L227.88 104.042" stroke="url(#paint5_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea5 show-on-scroll" d="M172.705 121.867L196.693 159.23" stroke="url(#paint2_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <path class="idea6 show-on-scroll" d="M143.523 134.522L131.077 170.429" stroke="url(#paint3_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-          <defs>
-          <linearGradient id="paint0_linear" x1="26" y1="102" x2="49.0319" y2="46.4523" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="0.505208" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#97C7FF" stop-opacity="0.83"/>
-          </linearGradient>
-          <linearGradient id="paint1_linear" x1="69.5" y1="17.4999" x2="128.644" y2="114.94" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="0.364583" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#AAD1FF"/>
-          </linearGradient>
-          <linearGradient id="paint2_linear" x1="218.5" y1="159" x2="224.691" y2="107.253" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="0.364583" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#B3D6FF"/>
-          </linearGradient>
-          <linearGradient id="paint3_linear" x1="137" y1="185.5" x2="163.298" y2="176.363" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="0.505208" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#82BBFF"/>
-          </linearGradient>
-          <linearGradient id="paint4_linear" x1="124.5" y1="-15.5" x2="101.269" y2="11.619" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.68"/>
-          <stop offset="0.505208" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#9FCBFF"/>
-          </linearGradient>
-          <linearGradient id="paint5_linear" x1="239" y1="19.4999" x2="215.566" y2="108.166" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#2D8DFF" stop-opacity="0.55"/>
-          <stop offset="0.5011" stop-color="#84BCFF"/>
-          <stop offset="1" stop-color="#9CCAFF"/>
-          </linearGradient>
-          </defs>
-        </svg>       
+        <div class="p_sectionTitle_container">
+          <div class="p_sectionTitle">IDEA</div>
+        </div>
       </div>
       <div class="p_box_splash" style="background-image: url(../img/works/donny/3-0.jpg); margin-top: 180px;" title="Motion, Interaction, Donny99, UX Design, 디자인"></div>
       <div class="p_box_3" style="background-image: url(../img/works/donny/3-1.jpg);" title="Motion, Interaction, Donny99, UX Design, 디자인"></div>
@@ -227,19 +231,21 @@
           같은 기획 검증과 함께 기술검증이 선행</b>되어야 합니다. 작은 프로젝트에서도 그러한 (<b>태도</b>라고 할까요?) 것들을 연습하기 위해 일부러 차근차근 개발하는 
           방식을 가졌습니다. 확실히 본 프로젝트의 코드가 덜 비대해지는 것 같았고, 핵심적인 부분만 이해하고 깔끔하게 추가할 수 있었습니다.</p>
       </div>
-      <div class="p_section_container1" style="margin-top: 70px;">
-        <div class="p_section_container2">
-          <span class="p_section_title">DESIGN</span>
+      <div class="p_section_container">
+        <div class="p_section_interaction">
+          <svg class="interaction" width="241" height="199" viewBox="0 0 241 199" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="design1 show-on-scroll" d="M11.128 149.895C17.0919 218.845 118.704 185.139 103.063 130.521C87.4211 75.9029 25.8435 100.671 57.8065 145.704C89.7695 190.736 205 149.895 177.479 77.7496C149.958 5.60407 66.1919 62.1553 137.096 122.328C208 182.5 280.5 64.5 183.5 11" stroke="url(#paint0_linear)" stroke-width="20.53" stroke-linecap="round"/>
+            <defs>
+            <linearGradient id="paint0_linear" x1="172.258" y1="65.2027" x2="85.0287" y2="157.848" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4098FF" stop-opacity="0.75"/>
+            <stop offset="1" stop-color="#83BCFF" stop-opacity="0.75"/>
+            </linearGradient>
+            </defs>
+          </svg>
         </div>
-        <svg class="p_section_interaction" width="241" height="199" viewBox="0 0 241 199" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path class="design1 show-on-scroll" d="M11.128 149.895C17.0919 218.845 118.704 185.139 103.063 130.521C87.4211 75.9029 25.8435 100.671 57.8065 145.704C89.7695 190.736 205 149.895 177.479 77.7496C149.958 5.60407 66.1919 62.1553 137.096 122.328C208 182.5 280.5 64.5 183.5 11" stroke="url(#paint0_linear)" stroke-width="20.53" stroke-linecap="round"/>
-          <defs>
-          <linearGradient id="paint0_linear" x1="172.258" y1="65.2027" x2="85.0287" y2="157.848" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#4098FF" stop-opacity="0.75"/>
-          <stop offset="1" stop-color="#83BCFF" stop-opacity="0.75"/>
-          </linearGradient>
-          </defs>
-        </svg>
+        <div class="p_sectionTitle_container">
+          <div class="p_sectionTitle">DESIGN</div>
+        </div>
       </div>
       <div class="p_box_splash" style="background-image: url(../img/works/donny/5.jpg);" title="Donny99, UX Design, 디자인"></div>
       <div class="p_box_3" style="background-image: url(../img/works/donny/5-1.jpg);" title="Donny99, UX Design, 디자인"></div>
@@ -275,11 +281,9 @@
           활용하였습니다. 모바일 사용성과는 크게 상관있지는 않지만, <code>unicode-range</code>를 조정하여 국문과 영문 서체를 각각 분리하였습니다. 
           가독성 향상은 아니지만 제가 원했던 무게감의 view를 맞출 수 있었습니다.</p>
       </div>
-      <div class="p_section_container1" style="margin: 130px auto 170px auto;">
-        <div class="p_section_container2">
-          <span class="p_section_title2">REVIEW</span>
-        </div>
-        <svg class="p_section_interaction" width="276" height="140" viewBox="0 0 276 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div class="p_section_container">
+        <div class="p_section_interaction">
+          <svg class="interaction" width="276" height="140" viewBox="0 0 276 140" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path class="review1 show-on-scroll" d="M12 128L12 27" stroke="url(#paint0_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
           <path class="review2 show-on-scroll" d="M54 128L54 12" stroke="url(#paint1_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
           <path class="review3 show-on-scroll" d="M96 128L96 43" stroke="url(#paint2_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
@@ -318,6 +322,10 @@
           </linearGradient>
           </defs>
           </svg>
+        </div>
+        <div class="p_sectionTitle_container">
+          <div class="p_sectionTitle">REVIEW</div>
+        </div>
       </div>
       <div class="p_box_4" style="background-image: url(../img/works/donny/7.jpg); margin-top: 180px;" title="Donny99, UX Design, 디자인"></div>
       <div class="p_container">
