--- a/works/eroica.html
+++ b/works/eroica.html
@@ -92,34 +92,36 @@
       <p class="p_body">Times Eroica는 2017년 서울디자인고등학교 졸업 전시를 위해 제작한 제목 겸 본문용 영문 서체입니다. Times Roman을 모델폰트로 제작하였고, 
         라틴 서체의 역사부터 조형적 특성, 착시까지 시각디자인의 기본인 타이포그래피의 많은 부분을 공부, 연구한 프로젝트였습니다.</p>
     </div>
-    <div class="p_section_container1">
-      <div class="p_section_container2">
-        <span class="p_section_title">SITUATION</span>
+    <div class="p_section_container">
+      <div class="p_section_interaction">
+        <svg class="interaction" width="298" height="181" viewBox="0 0 298 181" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path class="situation1 show-on-scroll" d="M102.5 53L11 170.5H244" stroke="url(#paint1_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="situation2 show-on-scroll" d="M180.397 11L86 133H214" stroke="url(#paint0_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="situation3 show-on-scroll" d="M116 11L189 103" stroke="url(#paint3_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="situation4 show-on-scroll" d="M193 51L287 170.5" stroke="url(#paint2_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
+          <defs>
+          <linearGradient id="paint0_linear" x1="150" y1="11" x2="99" y2="133" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#84BCFF" stop-opacity="0.84"/>
+          <stop offset="1" stop-color="#4098FF" stop-opacity="0.79"/>
+          </linearGradient>
+          <linearGradient id="paint1_linear" x1="124.5" y1="56" x2="84.5" y2="171" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#84BCFF" stop-opacity="0.79"/>
+          <stop offset="1" stop-color="#4098FF" stop-opacity="0.74"/>
+          </linearGradient>
+          <linearGradient id="paint2_linear" x1="240" y1="51" x2="304.5" y2="167.5" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#84BCFF" stop-opacity="0.94"/>
+          <stop offset="1" stop-color="#4098FF" stop-opacity="0.88"/>
+          </linearGradient>
+          <linearGradient id="paint3_linear" x1="116" y1="11" x2="152.5" y2="103" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#84BCFF" stop-opacity="0.89"/>
+          <stop offset="1" stop-color="#4098FF" stop-opacity="0.75"/>
+          </linearGradient>
+          </defs>
+        </svg>
       </div>
-      <svg class="p_section_interaction" width="298" height="181" viewBox="0 0 298 181" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path class="situation1 show-on-scroll" d="M102.5 53L11 170.5H244" stroke="url(#paint1_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="situation2 show-on-scroll" d="M180.397 11L86 133H214" stroke="url(#paint0_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="situation3 show-on-scroll" d="M116 11L189 103" stroke="url(#paint3_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="situation4 show-on-scroll" d="M193 51L287 170.5" stroke="url(#paint2_linear)" stroke-width="21" stroke-linecap="round" stroke-linejoin="round"/>
-        <defs>
-        <linearGradient id="paint0_linear" x1="150" y1="11" x2="99" y2="133" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#84BCFF" stop-opacity="0.84"/>
-        <stop offset="1" stop-color="#4098FF" stop-opacity="0.79"/>
-        </linearGradient>
-        <linearGradient id="paint1_linear" x1="124.5" y1="56" x2="84.5" y2="171" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#84BCFF" stop-opacity="0.79"/>
-        <stop offset="1" stop-color="#4098FF" stop-opacity="0.74"/>
-        </linearGradient>
-        <linearGradient id="paint2_linear" x1="240" y1="51" x2="304.5" y2="167.5" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#84BCFF" stop-opacity="0.94"/>
-        <stop offset="1" stop-color="#4098FF" stop-opacity="0.88"/>
-        </linearGradient>
-        <linearGradient id="paint3_linear" x1="116" y1="11" x2="152.5" y2="103" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#84BCFF" stop-opacity="0.89"/>
-        <stop offset="1" stop-color="#4098FF" stop-opacity="0.75"/>
-        </linearGradient>
-        </defs>
-        </svg>          
+      <div class="p_sectionTitle_container">
+        <div class="p_sectionTitle">SITUATION</div>
+      </div>
     </div>
     <div class="p_box_container" style="margin: 160px auto auto auto;">
       <div class="p_box_1" style="background-image: url(../img/works/eroica/2.jpg);" title="Eroica, Typography, 타이포그래피"></div>
@@ -157,50 +159,52 @@
         타임스 뉴 로만을 모델서체로 정한 이유는 제작자 스탠리 모리슨이 불우한 환경 속에서 타이포그래퍼가 된 이야기가 흥미로워서도 있고, 타임스 유로파(1972), 
         타임스 밀레니엄(1997), 타임스 클래식(2001) 등 베리에이션들을 보며 <b>변형과 재해석의 여지</b>를 느꼈기 때문입니다.</p>
     </div>
-    <div class="p_section_container1">
-      <div class="p_section_container2">
-        <span class="p_section_title">IDEA</span>
+    <div class="p_section_container">
+      <div class="p_section_interaction">
+        <svg class="interaction" width="310" height="184" viewBox="0 0 310 184" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path class="idea1 show-on-scroll" d="M23.0002 166L139.611 100.213L80.7269 79.707" stroke="url(#paint0_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="idea2 show-on-scroll" d="M135.937 60.6578L113.222 22.5066" stroke="url(#paint1_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="idea3 show-on-scroll" d="M164.519 48.3687L178.917 13.198" stroke="url(#paint4_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="idea4 show-on-scroll" d="M287.275 17.3297L168.996 83.5354L227.88 104.042" stroke="url(#paint5_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="idea5 show-on-scroll" d="M172.705 121.867L196.693 159.23" stroke="url(#paint2_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+          <path class="idea6 show-on-scroll" d="M143.523 134.522L131.077 170.429" stroke="url(#paint3_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
+          <defs>
+          <linearGradient id="paint0_linear" x1="26" y1="102" x2="49.0319" y2="46.4523" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#4098FF" stop-opacity="0.75"/>
+          <stop offset="0.505208" stop-color="#84BCFF"/>
+          <stop offset="1" stop-color="#97C7FF" stop-opacity="0.83"/>
+          </linearGradient>
+          <linearGradient id="paint1_linear" x1="69.5" y1="17.4999" x2="128.644" y2="114.94" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#4098FF" stop-opacity="0.75"/>
+          <stop offset="0.364583" stop-color="#84BCFF"/>
+          <stop offset="1" stop-color="#AAD1FF"/>
+          </linearGradient>
+          <linearGradient id="paint2_linear" x1="218.5" y1="159" x2="224.691" y2="107.253" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#4098FF" stop-opacity="0.75"/>
+          <stop offset="0.364583" stop-color="#84BCFF"/>
+          <stop offset="1" stop-color="#B3D6FF"/>
+          </linearGradient>
+          <linearGradient id="paint3_linear" x1="137" y1="185.5" x2="163.298" y2="176.363" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#4098FF" stop-opacity="0.75"/>
+          <stop offset="0.505208" stop-color="#84BCFF"/>
+          <stop offset="1" stop-color="#82BBFF"/>
+          </linearGradient>
+          <linearGradient id="paint4_linear" x1="124.5" y1="-15.5" x2="101.269" y2="11.619" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#4098FF" stop-opacity="0.68"/>
+          <stop offset="0.505208" stop-color="#84BCFF"/>
+          <stop offset="1" stop-color="#9FCBFF"/>
+          </linearGradient>
+          <linearGradient id="paint5_linear" x1="239" y1="19.4999" x2="215.566" y2="108.166" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#2D8DFF" stop-opacity="0.55"/>
+          <stop offset="0.5011" stop-color="#84BCFF"/>
+          <stop offset="1" stop-color="#9CCAFF"/>
+          </linearGradient>
+          </defs>
+        </svg>
       </div>
-      <svg class="p_section_interaction" width="310" height="184" viewBox="0 0 310 184" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path class="idea1 show-on-scroll" d="M23.0002 166L139.611 100.213L80.7269 79.707" stroke="url(#paint0_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="idea2 show-on-scroll" d="M135.937 60.6578L113.222 22.5066" stroke="url(#paint1_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="idea3 show-on-scroll" d="M164.519 48.3687L178.917 13.198" stroke="url(#paint4_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="idea4 show-on-scroll" d="M287.275 17.3297L168.996 83.5354L227.88 104.042" stroke="url(#paint5_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="idea5 show-on-scroll" d="M172.705 121.867L196.693 159.23" stroke="url(#paint2_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-        <path class="idea6 show-on-scroll" d="M143.523 134.522L131.077 170.429" stroke="url(#paint3_linear)" stroke-width="20.8678" stroke-linecap="round" stroke-linejoin="round"/>
-        <defs>
-        <linearGradient id="paint0_linear" x1="26" y1="102" x2="49.0319" y2="46.4523" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#4098FF" stop-opacity="0.75"/>
-        <stop offset="0.505208" stop-color="#84BCFF"/>
-        <stop offset="1" stop-color="#97C7FF" stop-opacity="0.83"/>
-        </linearGradient>
-        <linearGradient id="paint1_linear" x1="69.5" y1="17.4999" x2="128.644" y2="114.94" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#4098FF" stop-opacity="0.75"/>
-        <stop offset="0.364583" stop-color="#84BCFF"/>
-        <stop offset="1" stop-color="#AAD1FF"/>
-        </linearGradient>
-        <linearGradient id="paint2_linear" x1="218.5" y1="159" x2="224.691" y2="107.253" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#4098FF" stop-opacity="0.75"/>
-        <stop offset="0.364583" stop-color="#84BCFF"/>
-        <stop offset="1" stop-color="#B3D6FF"/>
-        </linearGradient>
-        <linearGradient id="paint3_linear" x1="137" y1="185.5" x2="163.298" y2="176.363" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#4098FF" stop-opacity="0.75"/>
-        <stop offset="0.505208" stop-color="#84BCFF"/>
-        <stop offset="1" stop-color="#82BBFF"/>
-        </linearGradient>
-        <linearGradient id="paint4_linear" x1="124.5" y1="-15.5" x2="101.269" y2="11.619" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#4098FF" stop-opacity="0.68"/>
-        <stop offset="0.505208" stop-color="#84BCFF"/>
-        <stop offset="1" stop-color="#9FCBFF"/>
-        </linearGradient>
-        <linearGradient id="paint5_linear" x1="239" y1="19.4999" x2="215.566" y2="108.166" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#2D8DFF" stop-opacity="0.55"/>
-        <stop offset="0.5011" stop-color="#84BCFF"/>
-        <stop offset="1" stop-color="#9CCAFF"/>
-        </linearGradient>
-        </defs>
-      </svg>       
+      <div class="p_sectionTitle_container">
+        <div class="p_sectionTitle">IDEA</div>
+      </div>
     </div>
     <div class="p_box_splash" style="background-image: url(../img/works/eroica/6.jpg); margin-top: 160px;" title="Visualization, 시각화"></div>
     <div class="p_container">
@@ -228,20 +232,21 @@
         Ball과 같은 형태가 일반적이지만, Eroica의 Terminal은 가독성에 영향을 끼치지 않는 수준에서 칼로 자른듯한 날카로운 모습으로 제작하였습니다. 또한, 
         g의 Ear, Link와 같은 부분 역시 같은 정서로 제작했습니다.</p>
     </div>
-
-    <div class="p_section_container1" style="margin-top: 70px;">
-      <div class="p_section_container2">
-        <span class="p_section_title">DESIGN</span>
+    <div class="p_section_container">
+      <div class="p_section_interaction">
+        <svg class="interaction" width="241" height="199" viewBox="0 0 241 199" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path class="design1 show-on-scroll" d="M11.128 149.895C17.0919 218.845 118.704 185.139 103.063 130.521C87.4211 75.9029 25.8435 100.671 57.8065 145.704C89.7695 190.736 205 149.895 177.479 77.7496C149.958 5.60407 66.1919 62.1553 137.096 122.328C208 182.5 280.5 64.5 183.5 11" stroke="url(#paint0_linear)" stroke-width="20.53" stroke-linecap="round"/>
+          <defs>
+          <linearGradient id="paint0_linear" x1="172.258" y1="65.2027" x2="85.0287" y2="157.848" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#4098FF" stop-opacity="0.75"/>
+          <stop offset="1" stop-color="#83BCFF" stop-opacity="0.75"/>
+          </linearGradient>
+          </defs>
+        </svg>
       </div>
-      <svg class="p_section_interaction" width="241" height="199" viewBox="0 0 241 199" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path class="design1 show-on-scroll" d="M11.128 149.895C17.0919 218.845 118.704 185.139 103.063 130.521C87.4211 75.9029 25.8435 100.671 57.8065 145.704C89.7695 190.736 205 149.895 177.479 77.7496C149.958 5.60407 66.1919 62.1553 137.096 122.328C208 182.5 280.5 64.5 183.5 11" stroke="url(#paint0_linear)" stroke-width="20.53" stroke-linecap="round"/>
-        <defs>
-        <linearGradient id="paint0_linear" x1="172.258" y1="65.2027" x2="85.0287" y2="157.848" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#4098FF" stop-opacity="0.75"/>
-        <stop offset="1" stop-color="#83BCFF" stop-opacity="0.75"/>
-        </linearGradient>
-        </defs>
-      </svg>
+      <div class="p_sectionTitle_container">
+        <div class="p_sectionTitle">DESIGN</div>
+      </div>
     </div>
     <div class="p_box_container" style="margin: 160px auto auto auto;">
       <div class="p_box_1" style="background-image: url(../img/works/eroica/8.jpg);" title="Eroica, Typography, Font Forge, 타이포그래피"></div>
@@ -267,21 +272,9 @@
           주변 글자의 크기에 따라 소문자의 크기가 달라졌습니다. <b>수치적 접근</b>보다는 고바야시 아키라 씨의 ‘결국 눈으로 봤을 때 편안해야 좋은 서체입니다’.
           와 같은 말처럼 <b>시각적 자연스러움</b>을 추구하였습니다. 또한, 기본 자간 설정과 합자 제작으로 디테일에 신경 썼습니다.</p>
     </div>
-    <div class="p_box_4" style="background-image: url(../img/works/eroica/11.jpg);" title="Eroica, Typography, 타이포그래피"></div>
-    <div id="web" class="p_box_splash" style="background-image: url(../img/works/eroica/11-1.jpg); margin-top: 120px;" title="Eroica, Typography, 타이포그래피"></div>
-    <div id="mobile" class="p_box_splash" style="background-image: url(../img/works/eroica/11-1.jpg); margin-top: 10px;" title="Eroica, Typography, 타이포그래피"></div>
-    <div id="web" class="p_box_3" style="background-image: url(../img/works/eroica/11-2.jpg);" title="Eroica, Typography, 타이포그래피"></div>
-    <div id="mobile" class="p_box_3" style="background-image: url(../img/works/eroica/11-2.jpg); margin-top: 10px;" title="Eroica, Typography, 타이포그래피"></div>
-    <div class="p_box_3" style="background-image: url(../img/works/eroica/11-3.jpg); margin-top: 10px;" title="Eroica, Typography, 타이포그래피"></div>
-    <div class="p_box_container" style="margin: 10px auto auto auto;">
-    <div class="p_box_1" style="background-image: url(../img/works/eroica/11-4.jpg);" title="Eroica, Typography, 타이포그래피"></div>
-    <div class="p_box_2" style="background-image: url(../img/works/eroica/11-5.jpg);" title="Eroica, Typography, 타이포그래피"></div>
-    </div>
-    <div class="p_section_container1" style="margin: 130px auto 170px auto;">
-      <div class="p_section_container2">
-        <span class="p_section_title2">REVIEW</span>
-      </div>
-      <svg class="p_section_interaction" width="276" height="140" viewBox="0 0 276 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div class="p_section_container">
+      <div class="p_section_interaction">
+        <svg class="interaction" width="276" height="140" viewBox="0 0 276 140" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path class="review1 show-on-scroll" d="M12 128L12 27" stroke="url(#paint0_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
         <path class="review2 show-on-scroll" d="M54 128L54 12" stroke="url(#paint1_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
         <path class="review3 show-on-scroll" d="M96 128L96 43" stroke="url(#paint2_linear)" stroke-width="22.51" stroke-linecap="round" stroke-linejoin="round"/>
@@ -320,8 +313,12 @@
         </linearGradient>
         </defs>
         </svg>
+      </div>
+      <div class="p_sectionTitle_container">
+        <div class="p_sectionTitle">REVIEW</div>
+      </div>
     </div>
-    <div class="p_container">
+    <div class="p_container" style="margin-top: 130px;">
       <p class="p_title_kr">자생하는 능력, 부족했던 참신함</p>
       <p class="p_body">크게 두 가지를 배웠습니다. 첫 번째는 기본적인 한글/라틴 서체의 구조와 개념, 역사이고, 두 번째는 
         <b>스스로 찾아 공부하는 법</b>입니다. 선생님, 교수님이라고 현명한 것이 아닙니다. 모두가, 모든 지식이 연결된 지금, 약간의 노력을 
