--- a/works.html
+++ b/works.html
@@ -82,13 +82,13 @@
     <!--works----------------------->
     <div class="container">
       <div name="웹페이지 리뉴얼">
-        <a href="works/donny.html" class="work_img" style="background-image: url(img/works/donny/1.JPG)" title="web design, 웹디자인"></a>
+        <a href="works/donny.html" class="work_img" style="background-image: url(img/works/donny/1.jpg)" title="web design, 웹디자인"></a>
         <a class="work_title" href="works/donny.html">웹 사이트 리뉴얼 노트</a>
         <p class="work_subtitle">개발자와 소통하기 위한 노력, 나를 소개하는 방법</p>
         <p class="work_date">Spring 2021 | Web Design</p>
       </div>
       <div name="bookshelf">
-        <a href="works/bookshelf.html" class="work_img" style="background-image: url(img/works/bookshelf/1.JPG)" title="bookcover design, 북디자인"></a>
+        <a href="works/bookshelf.html" class="work_img" style="background-image: url(img/works/bookshelf/1.jpg)" title="bookcover design, 북디자인"></a>
         <a class="work_title" href="works/bookshelf.html">Bookshelf</a>
         <p class="work_subtitle">텍스트적 상상을 시각화하기</p>
         <p class="work_date">Summer 2020 | Graphic Design</p>
