--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <p class="main_sub2">Based in Seoul</p>
     <!--works----------------------->
     <div name="웹페이지 리뉴얼">
-      <a href="works/donny.html" class="work_img" style="background-image: url(img/works/donny/1.JPG)" title="web design, 웹디자인"></a>
+      <a href="works/donny.html" class="work_img" style="background-image: url(img/works/donny/1.jpg)" title="web design, 웹디자인"></a>
       <a class="work_title" href="works/donny.html">웹 사이트 리뉴얼 노트</a>
       <p class="work_subtitle">개발자와 소통하기 위한 노력, 나를 소개하는 방법</p>
       <p class="work_date">Spring 2021 | Web Design</p>
