banner span to div

--- a/works/bookshelf.html
+++ b/works/bookshelf.html
@@ -82,9 +82,9 @@
       <!--works----------------------->
       <div class="banner" style="background-image: url(../img/works/bookshelf/1.jpg);" title="Bookshelf, Book Design, 북디자인">
         <div class="banner_container">
-          <span class="banner_title">Bookshelf</span><br>
-          <span class="banner_subtitle">텍스트적 상상을 시각화하기</span>
-          <span class="banner_date">Summer 2020</span>
+          <div class="banner_title">Bookshelf</div><br>
+          <div class="banner_subtitle">텍스트적 상상을 시각화하기</div>
+          <div class="banner_date">Summer 2020</div>
         </div>
       </div>
       <div class="p_container" style="margin-top: 100px;">
