--- a/works/eroica.html
+++ b/works/eroica.html
@@ -82,9 +82,9 @@
     <!--works----------------------->
     <div class="banner" style="background-image: url(../img/works/eroica/1.jpg);" title="Eroica, Typography, 타이포그래피"">
       <div class="banner_container">
-        <span class="banner_title">Times Eroica</span><br>
-        <span class="banner_subtitle">가장 단순한 서체 공부법</span>
-        <span class="banner_date">Autum 2017</span>
+        <div class="banner_title">Times Eroica</div><br>
+        <div class="banner_subtitle">가장 단순한 서체 공부법</div>
+        <div class="banner_date">Autum 2017</div>
       </div>
     </div>
     <div class="p_container" style="margin-top: 80px;">
