--- a/works/eroica.html
+++ b/works/eroica.html
@@ -83,7 +83,7 @@
     <div class="banner" style="background-image: url(../img/works/eroica/1.jpg);" title="Eroica, Typography, 타이포그래피"">
       <div class="banner_container">
         <div class="banner_title">Times Eroica</div><br>
-        <div class="banner_subtitle">가장 단순한 서체 공부법</div>
+        <div class="banner_subtitle">가장 단순한 서체 공부법</div><br>
         <div class="banner_date">Autum 2017</div>
       </div>
     </div>
