--- a/works/bookshelf.html
+++ b/works/bookshelf.html
@@ -83,7 +83,7 @@
       <div class="banner" style="background-image: url(../img/works/bookshelf/1.jpg);" title="Bookshelf, Book Design, 북디자인">
         <div class="banner_container">
           <div class="banner_title">Bookshelf</div><br>
-          <div class="banner_subtitle">텍스트적 상상을 시각화하기</div>
+          <div class="banner_subtitle">텍스트적 상상을 시각화하기</div><br id="mobile2">
           <div class="banner_date">Summer 2020</div>
         </div>
       </div>
