--- a/works/donny.html
+++ b/works/donny.html
@@ -83,7 +83,7 @@
     <div class="banner" style="background-image: url(../img/works/donny/1.jpg);" title="Donny99, UX Design, 디자인">
       <div class="banner_container">
         <div class="banner_title">웹 사이트 리뉴얼 노트</div><br>
-        <div class="banner_subtitle">개발자와 소통하기 위한 노력, 나를 소개하는 방법</div>
+        <div class="banner_subtitle">개발자와 소통하기 위한 노력, 나를 소개하는 방법</div><br id="mobile2">
         <div class="banner_date">Spring 2021</div>
       </div>
     </div>
